flask_app/static/home.css
* {
    padding: 0;
    margin: 0;
    font-family: 'FF Mark W05', sans-serif;
    box-sizing: border-box;
    letter-spacing: 1px;
    scroll-behavior: smooth;
}

:root {
    --light-red: rgba(235, 130, 130, 1);
    --dark-red:  rgba(203, 106, 106, 1);
    --dark-charc: rgb(15,15,15);
    --charc: rgb(50,50,50);
    --light-charc:  rgb(100,100,100);
    --light-gray: rgba(180,180,180,1);
    --soft-white: rgb(247, 247, 247);
    --light-green: rgb(210,255,195);
    --green: #1db352;
    --purple: #7D38A6;
    --light-btn:  #FBD38D;
}

#body {
    background-color: rgb(225, 225, 225);
    /*background-color:  #DAE0E6;*/
}

.navContainer {
    border-bottom: 1px solid #282828;
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 2;
}

.navBar {
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #111111;
    height: 50px;
    width: 100%;
    padding: 0.5% 3%;
}

span {
    color: #ff0000;
}

.logo > a {
    text-decoration: none;
    color: inherit;

}

.searchBar {
    background-color: #282828;
    display: flex;
    align-items: center;
    min-width: 50%;
}

.svgSearch {
    filter: invert(100)
}

.svgSearch > svg {
    margin-left: 20%;
}

::placeholder {
    color: white;
}

input:focus-visible {
    outline-offset: 0px;
}

.svgSearch, ::placeholder {
    opacity: 0.40;
}

.searchInput {
    background-color: #282828;
    border: None;
    color: black;
    min-width:90%;
    margin-left:  3%;
    padding: 1% 0.5% 1% 0.5%;
    color: rgb(245, 245, 245);
}

.searchInput:active, .searchInput:focus {
    outline: 1px solid white;
}

.leftNav, .rightNav {
    display: flex;
    color: #1db352;
}

.leftNav {
    margin-left: 25px;
}

/* Rigth Nav */
.rightNav {
    margin-right: 25px;
    padding: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #282828;
    border-radius: 7px;
    border: none;
}

.rightNav:hover {
    background-color: #3c3c3c;
    cursor: pointer;
}

.rightNavDropdown {
    height: 25px;
}

.navDropdownContainer {
    background-color: #3c3c3c;
    max-width: 200px;
    min-width: 200px;
    text-align: center;
    position: fixed;
    z-index: 5;
    right: 5%;
    top: 40px;
}

.navDropdownContainer > a {
    text-decoration: none;
}

.navDropdownCard:hover {
    background-color: var(--light-charc);
}

.navDropdownLink {
    color: var(--soft-white);
    line-height: 2;
}



/* Body Container */
.bodyContainer {
    max-width: 100%;
    min-height: 93vh;
    margin: 0;
    padding: 0 15%;
    display: flex;
    justify-content: space-between;
    padding-top: 20px;
    overflow-x: hidden;
    background-color:  rgb(245, 245, 245);
    background-position: cover;
    background: url(cline.svg);
    background-repeat: no-repeat;
}

.centerContainer {
    display: flex;
    justify-content:  center;
}

/*.cline {
    position: absolute;
    z-index: -1;
    background: url(cline.svg);
    min-width: 100%;
    min-height: ;
    background-repeat: no-repeat;
}
*/

/* LIGHT/DARK BUTTON */
.lightDarkBtn {
    padding: 5% 10%;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 25%;
    background-color: var(--purple);
    color: rgb(250, 250, 250);
}

.lightDarkBtn:hover {
    cursor: pointer;
}

.postContainer {
    max-width: 100%;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

/* BODY LEFT */

.bodyLeft {
    min-width: 55%;
    max-width: 55%;
    margin-top: 50px;
}

.messageContent {
    background-color: rgb(247, 247, 247);
    border-radius:20px;
    border:  1px solid rgb(240,240,240);
    width: 100%;
    max-width: 100%;
    padding: 2% 4%;
    margin-bottom: 25px;
    box-shadow: 0 0 9px 3px rgba(0, 0, 0, 0.2);
}

.rightMC {
    max-width: 100%;
}

.createPostTopicContainer {
    display: flex;
    justify-content: space-between;
}

.createPost {
    text-decoration: none;
}

.createPost > p {
    color: rgb(40, 40, 40);
    text-decoration: none;
}

.createPost:hover {
    cursor:  pointer;
}

.homeCreateBtn {
    max-width: 45%;
}

.homeLoginBtn {
    background-color:  var(--charc);
    padding: 0.6% 1.5%;
    border-radius: 20px;
    border-radius: 0 0 7px 1px black;
    color: var(--soft-white);
    text-decoration: none;
}

.homeLoginBtn:hover {
    background-color: #1db352;
}

/* USER POSTS */
.postTopInfo {
    display: flex;
    align-items: flex-end;
    margin-bottom: 4%;
    min-width: 100%;

}

.postTopInfo > * {
    /*text-decoration: none;*/
    color:  var(--charc);
}

.postTopTopic {
    font-size: 14px;
}

.postTopSpan {
    font-size: 12px;
    color: var(--light-charc);
}

.postTopAuthor {
    font-size: 14px;
}

.postAudioTitle {
    margin-bottom:  3%;
    font-size: 2rem;
    display: flex;
    flex-wrap: wrap;
    max-width: 100%;
    min-width: 100%;
}

.postAudioTitle > a {
    color: var(--charc);
    text-decoration: none;
    font-weight: 500;
}

.postAudioDescription {
    font-weight: 400;
    line-height: 1.6;
    font-size:  1rem;
    padding: 0 0.5% 2% 0.5%;
    margin: 1% 0 3% 0;
}

/* BODY RIGHT  */

.bodyRight {
    display: flex;
    max-width: 30%;
    min-width: 30%;
    margin-top: 50px;

}

.information {
    max-width:  100%;
    min-width: 100%;
}

/* TRENDING TABLE */

.trending {
    background-color: var(--dark-red);
    max-width: 100%;
    height: auto;
    margin-bottom: 25px;
    padding: 1% 1% 3% 1%;
    display:  flex;
    flex-direction: column;
    align-items: center;
    border: 10px solid var(--dark-red);
    border-radius:  20px;
    box-shadow: 0 0 9px 2px rgba(0, 0, 0, 0.2);
}

.trendingTableTitle {
    color: black;
    background-color: var(--dark-red);
    min-width: 100%;
    text-align: center;
    padding: 3% 0 5% 0;
    font-size: 1.4rem;
}

.topicCardHoldingLink {
    text-decoration: none;
}

.trendingTableTopicList {
    list-style: none;
    min-width: 100%;
    background-color: var(--soft-white);
    border-radius: 10px;
}


.trendingTopicCard {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    min-width: 100%;
    padding: 4% 2% 4% 10%;
    /*background-color: var(--soft-white);*/
    border-bottom: 1px solid var(--dark-red);
}

.trendingTopicCircleNumber {
    background-color: var(--dark-red);
    border-radius:  180px;
    padding: 2.5% 4%;
    margin-right: 5%;
}

.trendingTopicCircleNumberText {
    color: var(--charc);
}

.trendingTopicCardText > span {
    color: var(--charc);
    text-decoration: none;
}


/* LEGAL TABLE */

.legal {
    background-color: #111111;
    padding: 10% 2%;
    border-radius: 20px;
    box-shadow: 0 0 9px 2px rgba(0, 0, 0, 0.2);
    background-color: ;
    position: sticky;
    top: 70px;
    color: white;
    display: flex;
    justify-content: center;
}

.legalInfo > ul  {
    list-style: none;
}

.legalInfo > ul > li {
    margin-bottom: 10px;
}

.legalInfo > ul > li > a {
    color:  var(--soft-white); 
    text-decoration: none;
    font-size: 1rem;

}


/* Create Post Form */
.createFormContainer {
    background-position: center;
    background: url(pop-shapes.svg);
    background-repeat: no-repeat;
    min-width:  600px;
    max-width: 60%;
    max-height:  400px;
    margin-top: 5%;
    border-radius: 20px;
    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.4);
}

.createTopicContainer {
    background-position: center;
    background: url(green-pop-shapes.svg);
    background-repeat: no-repeat;
    min-width:  600px;
    max-width: 60%;
    max-height:  400px;
    margin-top: 5%;
    border-radius: 20px;
    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.4);
}

.createFormTopicContainer {
    background-position: center;
    background: url(green-pop-shapes.svg);
    background-repeat: no-repeat;
    min-width:  600px;
    max-width: 60%;
    max-height:  400px;
    margin-top: 5%;
    border-radius: 20px;
    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.4);
}

.createForm {
    background-color:  transparent;
    min-height: 100%;
    min-width: 100%;
    padding: 4% 8%;
    font-size: 16px;
}

.createFormTitle {
    margin-bottom: 5%;
    font-size: 2rem;
}

.postForm {
    min-width: 100%;
    margin-bottom: 3%;
}

.postForm > input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
    color: black;
}

.postForm > *:focus::-webkit-input-placeholder {
    color: #888;
}


.postInput {
    padding: 1%;
    color: rgb(50, 50, 50);
    min-width:100%;
}

.postInputTopicLabel {
    color: rgb(50, 50, 50);
}

.postSelectInput {
    padding: 1.25%;
    border: 1px solid var(--dark-red);
    border-radius: 5px;
    box-shadow: 2px 2px rgba(0,0,0,0.3);
    font-size: 15px;
}

.createFormSubmit {
    padding:  1% 2%;
    font-size: 15px;
    border-radius: 5px;
    border: 1px solid var(--charc);
}

.createFormSubmit:hover {
    color: white;
    background-color: var(--charc);
    cursor: pointer;
    font-weight:  bold;
}

.postDescription {
    resize: none;
    min-height: 80px;
}

.postURL {
    resize: none;
    min-height: 50px;
}

/* Grow Rotate */
.hvr-grow-rotate {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: transform;
  transition-property: transform;
}
.hvr-grow-rotate:hover, .hvr-grow-rotate:focus, .hvr-grow-rotate:active {
  -webkit-transform: scale(1.1) rotate(4deg);
  transform: scale(1.1) rotate(4deg);
}

/* End of Create Post ^^ */

/* General */

.lightOpacityBg {
    background-color: rgba(255, 255, 255, 0.4);
    color: black;
    padding: 1% 3%;
    border-radius: 15px;
}

.TenBorderRadius {
    border-radius: 10px;
}

.charcOutline:focus, .charcOutline:active {
    outline: 2px solid var(--charc);
}

#columnContainer {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.alignCenter {
    align-items: center;
}

.hidden {
    display: none;
}

.noPadding {
    padding: 0;
    border: none;
}


/* Bounce In */
.hvr-bounce-in {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
}
.hvr-bounce-in:hover, .hvr-bounce-in:focus, .hvr-bounce-in:active {
  -webkit-transform: scale(1.2);
  transform: scale(1.2);
  -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
}

